Add logic to replace colonists with warriors